2013-11-28 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbic: optimization for regular 2D source grids

2013-11-27 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbil: optimization for regular 2D source grids

2013-11-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbil: skip explicitly call to sort_add() (weights are sorted implicitly)

2013-11-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplib: cleanup and preparation for opt. reg2d grids

2013-11-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* delete: parameter level does not work [Bug #4216]

2013-11-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.6.2
	* Version 1.6.2 released

2013-11-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added test/test_Remap.sh

2013-10-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_gsl: start date of growing season is wrong if the length of growing season is zero (bug fix) 

2013-10-21  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* splitmon: added optional parameter to set the format string for the month [Feature #4131]
	* Sort: added support for multi level variables (bug fix) [report: Irina Fast]

2013-10-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridarea: replace cell_area_tri() by huiliers_area()
	* outputf: make second parameter (nelem) optional

2013-10-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridarea: numeric inaccuracy for triangles located directly on the pole (bug fix)

2013-09-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Consecstat: init vars with 0 (bug fix)
	* Seascount: added support for complex numbers
	* Timcount: added support for complex numbers

2013-08-26  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Timstat: added support for complex numbers

2013-08-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* setgridtype: parameter regular: added support for reduced grids on sub area

2013-08-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
