@@ -29,7 +29,7 @@ FLOAT   Temperature threshold (unit: @celsius; default: T = 25@celsius)
 
 
 @BeginExample
-To get the largest number of consecutive summer days of a time series of daily minimum temperatures use:
+To get the largest number of consecutive summer days of a time series of daily maximum temperatures use:
 @BeginVerbatim
    cdo eca_csu txfile ofile
 @EndVerbatim
