@@ -4,6 +4,8 @@ CDO NEWS
 Version 1.6.3 (18 February 2014):
    New features:
      * remapbil, remapbic: optimization for regular 2D source grids
+     * eca_csu: added number of csu periods with more than 5days per time period
+     * eca_cfd: added number of cfd periods with more than 5days per time period
    Fixed bugs:
      * delete: parameter level does not work [Bug #4216]
 
